# RustyBot

./: Cargo.toml  Readme.md
prisma/: schema.prisma
prisma/migrations/20230414011614_init/: migration.sql
prisma/migrations/20230420012048_unique_discord_user_id/: migration.sql
prisma/migrations/20230420014917_kudos_table_init/: migration.sql
prisma/migrations/20230502203712_update_kudos_table/: migration.sql
prisma/migrations/20230529031234_add_message_to_kudos/: migration.sql
src/: main.rs  prisma.rs
src/commands/: add_members.rs  command.rs  contribute.rs  give_kudos.rs  join.rs  kudos_received.rs  kudos_sent.rs  me.rs  mod.rs  ping.rs  version.rs
src/responses/: errors.rs  general.rs  mod.rs
src/utils/: role.rs
