[package]
name = "rusty-bot"
default-run = "rusty-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7"}
prisma-client-rust = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7"}
serde = "1.0.159"

tokio = {features=["macros","rt-multi-thread"], version = "1.17.0"}
tracing = "0.1.36"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
