[package]
name = "rusty-bot"
default-run = "rusty-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["postgresql", "migrations"]}
prisma-client-rust = {git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["postgresql", "migrations"]}
serde = "1.0.159"

openssl = { version = "0.10", features = ["vendored"] }
tokio = {features=["macros","rt-multi-thread"], version = "1.17.0"}
tracing = "0.1.36"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
lazy_static = "1.4.0"
async-trait = "0.1.68"
chrono = "0.4.24"
